--- a/css/smalldesign.css
+++ b/css/smalldesign.css
@@ -17,6 +17,7 @@ body {
     color:white;
     padding: 5px;
 }
+
 .company {
     text-align: center;
  }
@@ -63,6 +64,12 @@ body {
     grid-row: 1;
     justify-self: center; 
     align-self: center;   
+}
+
+.home {
+    color:#f3db9e;
+    grid-column: 2;
+    grid-row: 1;
 }
 
 ul {
