--- a/css/smalldesign.css
+++ b/css/smalldesign.css
@@ -55,7 +55,7 @@ body {
     grid-template-columns: 75% 25%;
     align-content: center;
     margin-top: 10px;
-    border-radius: 5px;
+    border-radius: 2px;
 }
 
 .title {
@@ -69,7 +69,11 @@ body {
 .home {
     color:#f3db9e;
     grid-column: 2;
-    grid-row: 1;
+    grid-row: 3;
+    padding-bottom: 10px;
+    margin-top: -5px;
+    justify-self: end;
+    margin-right: 10px;
 }
 
 ul {
@@ -162,3 +166,26 @@ col2T {
     
 }
 
+.BYUI {
+    color:#f3db9e;
+    }
+    
+.BYUI:hover {
+    color: #c7d5db;
+    }
+
+footer {
+    width: 100%;
+    background-color: #012a4a;
+    color: #D4E5ED;
+    min-height: 75px;
+    margin: auto;
+    text-align: center;
+    padding-top: 25px;
+    border-radius: 2px;
+    }
+
+    #work {
+        color:#f3db9e;
+        }
+        
