--- a/css/smalldesign.css
+++ b/css/smalldesign.css
@@ -82,7 +82,7 @@ ul {
     list-style-type: none;
     padding-left: 10px;
     padding-bottom: 5px;
-    padding top: 5px;
+    padding-top: 5px;
     margin-right: 10px;
     box-shadow: 1px 1px 4px #a0a4dc;
 }
