--- a/css/smalldesign.css
+++ b/css/smalldesign.css
@@ -174,7 +174,7 @@ col2T {
     color: #c7d5db;
     }
 
-footer {
+/*footer {
     width: 100%;
     background-color: #012a4a;
     color: #D4E5ED;
@@ -184,6 +184,7 @@ footer {
     padding-top: 25px;
     border-radius: 2px;
     }
+    */
 
     #work {
         color:#f3db9e;
