--- a/css/smalldesign.css
+++ b/css/smalldesign.css
@@ -80,6 +80,7 @@ ul {
     
     background-color:#f3db9e;
     list-style-type: none;
+    border-radius: 2px;
     padding-left: 10px;
     padding-bottom: 5px;
     padding-top: 5px;
