--- a/css/smalldesign.css
+++ b/css/smalldesign.css
@@ -133,6 +133,11 @@ body {
     font-size: .8em;
 }
 
+.description {
+    margin-left: 10px;
+    margin-right: 15px;
+}
+
 .col1 {
     grid-row: 1;
 }
