--- a/css/weather.css
+++ b/css/weather.css
@@ -2,11 +2,12 @@
 
 body {
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
-    font-size: 25px;
+    font-size: 18px;
 }
 header {
-    background-image: url("images/weather-header.jpg");
-    background-color: #CAE9A1;
+    background-image: url("./images/header.jpg");
+    background-color: #F1F5A9;
+    color:  #54665A;
     display: flex;
     flex-flow: column;
     align-items: center;
@@ -14,15 +15,17 @@ header {
     padding: 10px;
 }
 
+
+
 h1 {
     font-family: 'Playfair+Display', Times, serif;
-    font-size: 75px;
+    font-size: 50px;
     text-align: center;
 }
 
 .class-info {
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
-    font-size: 35px;
+    font-size: 25px;
     text-align: center;
 }
 
@@ -44,4 +47,29 @@ nav ul li a {
     text-align: center;
     padding: 1rem;
     text-decoration: none;
+}
+
+.color1 {
+    background-color: #DEE9C8;
+    color: #54665A
+}
+
+h2 {
+    font-family: Montserrat, Arial, Helvetica, sans-serif;
+    font-size: 35px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    text-align: center;
+}
+
+hr {
+    border: 2px solid  #82BFAC;
+    opacity: 50%;
+}
+
+h3 {
+    font-family: Montserrat, Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    color: #54665A;
+    text-align: center;
 }
