--- a/Lesson03/css/weather.css
+++ b/Lesson03/css/weather.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Playfair+Display&display=swap');
 
 body {
+    width: 80%;
+    margin: auto;
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: 18px;
 }
@@ -51,7 +53,8 @@ nav ul li a {
 
 .color1 {
     background-color: #DEE9C8;
-    color: #54665A
+    color: #54665A;
+   
 }
 
 h2 {
@@ -65,6 +68,7 @@ h2 {
 hr {
     border: 2px solid  #82BFAC;
     opacity: 50%;
+   
 }
 
 h3 {
