--- a/Lesson03/css/weather.css
+++ b/Lesson03/css/weather.css
@@ -17,7 +17,11 @@ header {
     padding: 10px;
 }
 
-
+.headimage {
+    background-image: url("./images/header.jpg");
+    background-size: 100%;
+    min-height: 100%;
+}
 
 h1 {
     font-family: 'Playfair+Display', Times, serif;
@@ -54,11 +58,11 @@ nav ul li a {
 .color1 {
     background-color: #DEE9C8;
     color: #54665A;
-   
+    margin-top: -24px;
 }
 
 h2 {
-    font-family: Montserrat, Arial, Helvetica, sans-serif;
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: 35px;
     padding-top: 15px;
     padding-bottom: 15px;
@@ -72,8 +76,163 @@ hr {
 }
 
 h3 {
-    font-family: Montserrat, Arial, Helvetica, sans-serif;
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: 30px;
     color: #54665A;
+    text-align: center;
+}
+
+/* CSS for index page */
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* css for audience page */
+.grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    column-gap: 20px;
+}
+
+.grid1 {
+    grid-column: 1;
+    grid-row: 1;
+    
+}
+
+.grid1-2 {
+    grid-column: 1;
+    grid-row: 2;
+    margin-top: 0;
+    margin-left: 0;
+    padding: 8px;
+    margin-right: 0;
+    background-color: #82BFAC;
+    color: #546654;
+}
+.grid2 {
+    grid-column: 1;
+    grid-row: 3;
+}
+
+.grid2-2 {
+    grid-column: 1;
+    grid-row: 4;
+    margin-top: 0;
+    margin-left: 0;
+    padding: 8px;
+    margin-right: 0;
+    background-color: #cae9a1;
+    color: #546654;
+}
+
+.grid3 {
+    grid-column: 1;
+    grid-row: 5;
+}
+
+.grid3-2 {
+    grid-column: 1;
+    grid-row: 6;
+    margin-top: 0;
+    margin-left: 0;
+    padding: 8px;
+    margin-right: 0;
+    background-color: #f1f5a9;
+    color: #546654;
+}
+
+.grid4 {
+    grid-column: 1;
+    grid-row: 7;
+}
+
+.grid4-2 {
+    grid-column: 1;
+    grid-row: 8;
+    margin-top: 0;
+    margin-left: 0;
+    padding: 8px;
+    margin-right: 0;
+    background-color: #ebb26f;
+    color: #546654;
+}
+
+/* color scheme page */
+.colors-img {
+    width: 100%;
+}
+
+/* typography page */
+table {
+    width: 100%;
+    border: 1px solid #82BFAC;
+    margin-bottom: 20px;
+}
+
+.overflow {
+    overflow-x: auto;
+}
+
+tr:first-child {
+    background-color: #F1F5A9;
+    color: #779280;
+}
+
+tr {
+    border: 1px solid #82BFAC;
+}
+
+.sample1 {
+    font-family: 'Playfair+Display', Times, serif;
+    font-size: 50px;
+    color: #54665A;
+    background-color: #F1F5A9;
+}
+.sample2 {
+    font-family: 'Playfair+Display', Times, serif;
+    font-size: 35px;
+    background-color: #82BFAC;
+    color: #DEE9C8;
+}
+
+.sample3 {
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    font-size: 35px;
+    background-color: #cae9a1;
+    color: #54665A;
+}
+
+.sample4 {
+    font-family: 'Playfair+Display', Times, serif;
+    font-size: 25px;
+    background-color: #DEE9C8;
+    color: #54665a;
+}
+
+.sample5 {
+    font-family: 'Playfair+Display', Times, serif;
+    font-size: 20;
+    color: #54665A;
+}
+
+.sample6 {
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    color: #54665A;
+
+}
+
+.footer-nav {
+    margin-top: 25px;
+    margin-bottom: 25px;
+    background-color: #CAE9A1;
+    color: #54665A;
+}
+
+.footer-content {
+    margin: auto;
     text-align: center;
 }
