--- a/Lesson03/css/weathermedium.css
+++ b/Lesson03/css/weathermedium.css
@@ -1,6 +1,82 @@
 @media screen and (min-width:37.5em) {
     nav ul {
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    }
+
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        column-gap: 20px;
+        row-gap: 20px;
+    }
+    
+    .grid1 {
+        width: 100%;
+        grid-column: 1;
+        grid-row: 1;
+        
+    }
+    
+    .grid1-2 {
+        
+        grid-column: 1;
+        grid-row: 2;
+        margin-top: -20px;
+        margin-left: 0;
+        margin-right: 0;
+        padding: 8px;
+        background-color: #82BFAC;
+        color: #546654;
+    }
+    .grid2 {
+        width: 100%;
+        grid-column: 2;
+        grid-row: 1;
+    }
+    
+    .grid2-2 {
+        grid-column: 2;
+        grid-row: 2;
+        margin-top: -20px;
+        margin-left: 0;
+        margin-right: 0;
+        padding: 8px;
+        background-color: #cae9a1;
+        color: #546654;
+    }
+    
+    .grid3 {
+        width: 100%;
+        grid-column: 1;
+        grid-row: 3;
+    }
+    
+    .grid3-2 {
+        grid-column: 1;
+        grid-row: 4;
+        margin-top: -20px;
+        margin-left: 0;
+        margin-right: 0;
+        padding: 8px;
+        background-color: #f1f5a9;
+        color: #546654;
+    }
+    
+    .grid4 {
+        width: 100%;
+        grid-column: 2;
+        grid-row: 3;
+    }
+    
+    .grid4-2 {
+        grid-column: 2;
+        grid-row: 4;
+        margin-top: -20px;
+        margin-left: 0;
+        margin-right: 0;
+        padding: 8px;
+        background-color: #ebb26f;
+        color: #546654;
     }
 }
