--- a/Lesson03/css/weatherlarge.css
+++ b/Lesson03/css/weatherlarge.css
@@ -78,6 +78,11 @@
         background-color: #ebb26f;
         color: #546654;
     }
-
+    .wide {
+        grid-column: 1/5;
+        grid-row: 3;
+        background-color: #dee9c8;
+        color: #546654;
+    }
 }
 
