--- a/Lesson03/css/weatherlarge.css
+++ b/Lesson03/css/weatherlarge.css
@@ -5,6 +5,7 @@
     }
 
     .grid {
+        
         display: grid;
         grid-template-columns: 1fr;
         column-gap: 20px;
@@ -12,7 +13,7 @@
     }
     
     .grid1 {
-        width: 270px;
+       width: 275px;
         grid-column: 1;
         grid-row: 1;
         
@@ -22,59 +23,63 @@
         grid-column: 1;
         grid-row: 2;
         margin-top: 0;
-        margin-left: 0;
+        margin-left: auto;
         padding: 8px;
-        margin-right: 0;
+        margin-right: auto;
         background-color: #82BFAC;
         color: #546654;
     }
     .grid2 {
-        width: 270px;
+        width: 275px;
+        object-fit: fill;
         grid-column: 2;
         grid-row: 1;
     }
     
     .grid2-2 {
+        
         grid-column: 2;
         grid-row: 2;
         margin-top: 0;
-        margin-left: 0;
+        margin-left: auto;
         padding: 8px;
-        margin-right: 0;
+        margin-right: auto;
         background-color: #cae9a1;
         color: #546654;
     }
     
     .grid3 {
-        width: 270px;
+        width: 275px;
         grid-column: 3;
         grid-row: 1;
     }
     
     .grid3-2 {
+        
         grid-column: 3;
         grid-row: 2;
         margin-top: 0;
-        margin-left: 0;
+        margin-left: auto;
         padding: 8px;
-        margin-right: 0;
+        margin-right: auto;
         background-color: #f1f5a9;
         color: #546654;
     }
     
     .grid4 {
-        width: 270px;
+       width: 275px;
         grid-column: 4;
         grid-row: 1;
     }
     
     .grid4-2 {
+        
         grid-column: 4;
         grid-row: 2;
         margin-top: 0;
-        margin-left: 0;
+        margin-left: auto;
         padding: 8px;
-        margin-right: 0;
+        margin-right: auto;
         background-color: #ebb26f;
         color: #546654;
     }
