--- a/css/smalldesign.css
+++ b/css/smalldesign.css
@@ -13,8 +13,9 @@ body {
 .what { 
      font-family: 'Merienda', cursive;
     text-align: center;
-    background-color: #f4883d;
+    background-color: #2c4740;
     color:white;
+    box-shadow: 2px 2px 6px #a0a4dc;
     padding: 5px;
 }
 
@@ -43,13 +44,13 @@ body {
 }
 
 .purple {
-    color: #a0a4dc;
+    color: #434664;
 }
 
 .head-grid {
     width: 100%;
     background-color: #012a4a;
-    box-shadow: 2px 2px 10px #a0a4dc;
+    box-shadow: 2px 2px 6px #a0a4dc;
     font-size: .8em;
     display: grid;
     grid-template-columns: 75% 25%;
@@ -67,7 +68,7 @@ body {
 }
 
 .home {
-    color:#f3db9e;
+    color:#c7d5db;
     grid-column: 2;
     grid-row: 3;
     padding-bottom: 10px;
@@ -104,7 +105,7 @@ a:link {
 }
 
 a.visited {
-   color:#707070(161, 250, 220);
+   color:#707070;
 }
 
 .wendy {
@@ -173,7 +174,7 @@ col2T {
 }
 
 .BYUI {
-    color:#f3db9e;
+    color:#dadfe0;
     }
     
 .BYUI:hover {
