--- a/css/smalldesign.css
+++ b/css/smalldesign.css
@@ -36,7 +36,7 @@ body {
 }
 
 .orange {
-    color: #ec9251;
+    color: #c96925;
 }
 
 .gray {
@@ -68,7 +68,7 @@ body {
 }
 
 .home {
-    color:#c7d5db;
+    color:#f4f4f5;
     grid-column: 2;
     grid-row: 3;
     padding-bottom: 10px;
@@ -174,7 +174,7 @@ col2T {
 }
 
 .BYUI {
-    color:#dadfe0;
+    color:#ecf3f5;
     }
     
 .BYUI:hover {
