--- a/Lesson 4/css/preston-4.css
+++ b/Lesson 4/css/preston-4.css
@@ -3,7 +3,8 @@
 header {
     background-color: #F1F5A9;
     color: #54665A;
-    width: 88%;
+    width: 1350px;
+    height: 262px;
     display: grid;
     grid-template-columns: 25% 75%;
     grid-template-rows: 1fr 1fr;
@@ -16,7 +17,7 @@ header {
 }
 
 .logoImage {
-    width: 125px;
+    width: 200px;
     height: auto;
     grid-column: 1;
     grid-row: 1/3;
@@ -27,24 +28,25 @@ header {
 }
 
 .headerH1 {
-    color: #ebb26f;
+    color: #ef6429;
     opacity: 85%;
-    text-shadow:0 3px 4px #f3f88e;
+    text-shadow:0 4px 5px #f3f88e;
     font-family: 'Playfair+Display', Times, serif;
     font-size: 3rem;
     grid-column: 2;
     grid-row: 1;
+    padding-top: 40px;
     padding-right: 250px;
-    margin-bottom: 2px;
+    margin-bottom: 5px;
     justify-self: center;
 }
 
 
 .headerP {
-    color: #546654;
+    color: #6ba9c9;
     text-shadow:0 4px 4px #f1f5a9;
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
-    font-size: .65rem;
+    font-size: 1.05rem;
     grid-column: 2;
     grid-row: 2;
     margin-top: 0;
@@ -83,4 +85,9 @@ nav ul li a:hover {
     color: white;
     background-color: #779280;
 
+}
+
+nav ul li a:active {
+    color: white;
+    background-color: #779280;
 }
