--- a/Lesson04/css/preston-large.css
+++ b/Lesson04/css/preston-large.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Playfair+Display&display=swap');
+@media screen and (min-width: 80em) {
 
 header {
     background-color: #F1F5A9;
@@ -22,6 +22,7 @@ header {
     grid-column: 1;
     grid-row: 1/3;
     justify-self: center;
+    align-self: center;
     padding-right: 10px;
     padding-top: 10px;
     padding-bottom: 0;
@@ -35,7 +36,7 @@ header {
     font-size: 3rem;
     grid-column: 2;
     grid-row: 1;
-    padding-top: 40px;
+    padding-top: 50px;
     padding-right: 250px;
     margin-bottom: 5px;
     justify-self: center;
@@ -56,7 +57,6 @@ header {
 
 }
 
-
 nav {
         box-shadow: 0 2px 15px #54665A;
         margin: 0 auto;
@@ -68,9 +68,11 @@ nav ul li:first-child {
     
 nav ul {
         list-style-type: none;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+        justify-content: center;
+        padding-left:86px;
+        padding-right: 86px;
     }
     
 nav ul li a {
@@ -91,3 +93,5 @@ nav ul li a:active {
     color: white;
     background-color: #779280;
 }
+}
+
