--- a/Lesson04/css/preston-4.css
+++ b/Lesson04/css/preston-4.css
@@ -43,7 +43,7 @@ header {
 
 
 .headerP {
-    color: #42758f;
+    color: #193b4d;
     text-shadow:0 4px 4px #f1f5a9;
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: .65rem;
@@ -77,6 +77,7 @@ nav ul {
 nav ul li a {
         display: block;
         font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+        font-weight: bold;
         color: #475e4e;
         text-align: center;
         padding: .5rem;
