--- a/Lesson04/css/preston-4.css
+++ b/Lesson04/css/preston-4.css
@@ -43,7 +43,7 @@ header {
 
 
 .headerP {
-    color: #052230;
+    color: #285c27;
     text-shadow:0 5px 6px #f1f5a9;
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: .65rem;
