--- a/Lesson04/css/preston-4.css
+++ b/Lesson04/css/preston-4.css
@@ -39,7 +39,6 @@ header {
     padding-top: 50px;
     margin-bottom: 5px;
     justify-self: center;
-    justify-content: center;
 }
 
 
@@ -62,36 +61,41 @@ header {
 nav {
         box-shadow: 0 2px 15px #435749;
         margin: 0 auto;
+        max-width: 760px;
     }
 
-nav ul li:first-child {
+.headermenu li:first-child {
     display: block;
 }
+
+.headermenu li {
+    display: none;
+}
     
-nav ul {
+.headermenu {
         list-style-type: none;
         margin: 0;
         padding: 0;
         overflow: hidden;
     }
     
-nav ul li a {
+.headermenu li a {
         display: block;
         font-family: 'Montserrat', Arial, Helvetica, sans-serif;
         font-weight: bold;
         color: #475e4e;
         text-align: center;
         padding: .5rem;
+        text-align: center;
         text-decoration: none;
     }
 
-nav ul li a:hover {
+.headermenu li a:hover {
     color: white;
     background-color: #475e4e;
 
 }
 
-nav ul li a:active {
-    color: white;
-    background-color: #475e4e;
+.responsive li {
+	display: block;
 }
