--- a/Lesson04/css/preston-large.css
+++ b/Lesson04/css/preston-large.css
@@ -1,94 +1,38 @@
 @media screen and (min-width: 80em) {
 
 header {
-    background-color: #F1F5A9;
-    color: #54665A;
     width: 1350px;
     height: 262px;
-    display: grid;
-    grid-template-columns: 25% 75%;
-    grid-template-rows: 1fr 1fr;
-    margin-top: 5px;
-    margin-right: auto;
-    margin-left: auto;
-    padding-top: 10px;
-    padding-left: 10px;
-
 }
 
 .logoImage {
     width: 200px;
     height: auto;
-    grid-column: 1;
-    grid-row: 1/3;
-    justify-self: center;
-    align-self: center;
-    padding-right: 10px;
-    padding-top: 10px;
-    padding-bottom: 0;
 }
 
 .headerH1 {
-    color: #ef6429;
-    opacity: 85%;
-    text-shadow:0 4px 5px #f3f88e;
-    font-family: 'Playfair+Display', Times, serif;
     font-size: 3rem;
-    grid-column: 2;
-    grid-row: 1;
     padding-top: 50px;
     padding-right: 250px;
-    margin-bottom: 5px;
-    justify-self: center;
 }
 
 
 .headerP {
     font-size: 1.05rem;
-    grid-column: 2;
-    grid-row: 2;
-    margin-top: 0;
     padding-right: 250px;
     justify-self: center;
-    padding-top: 0;
-
 }
 
 nav {
-        box-shadow: 0 2px 15px #54665A;
-        margin: 0 auto;
+        max-width: 1360px;
     }
-
-nav ul li:first-child {
-    display: block;
-}
     
-nav ul {
+.headermenu {
         list-style-type: none;
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
         justify-content: center;
-        padding-left:86px;
-        padding-right: 86px;
+        
     }
-    
-nav ul li a {
-        display: block;
-        color: #779280;
-        text-align: left;
-        padding: .5rem;
-        text-decoration: none;
-    }
-
-nav ul li a:hover {
-    color: white;
-    background-color: #779280;
-
-}
-
-nav ul li a:active {
-    color: white;
-    background-color: #779280;
-}
 }
 
