--- a/Lesson04/css/preston-medium.css
+++ b/Lesson04/css/preston-medium.css
@@ -1,8 +1,19 @@
 @media screen and (min-width: 32.5em) {
 
-nav ul {
-    display: grid;
-    grid-template-columns: 1fr 1f 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
+.headermenu {
+    display: flex;
+}
+
+.headermenu li {
+    display: block;
+    flex: 1 1 auto;
+}
+
+.headermenu a {
+    text-align: center;
+}
+
+.headermenu li:first-child {
+    display: none;
 }
 }
