--- a/Lesson04/css/preston-large.css
+++ b/Lesson04/css/preston-large.css
@@ -1,7 +1,7 @@
 @media screen and (min-width: 80em) {
 
 header {
-    width: 1350px;
+    width: 100%;
     height: 262px;
 }
 
@@ -24,7 +24,8 @@ header {
 }
 
 nav {
-        max-width: 1360px;
+        max-width: 100%;
+        padding-left: 150px;
     }
     
 .headermenu {
@@ -34,5 +35,12 @@ nav {
         justify-content: center;
         
     }
+}
+footer {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 190px;
+    padding-right: 190px;
+    margin-bottom: 25px;
 }
 
