--- a/Lesson04/css/preston-4.css
+++ b/Lesson04/css/preston-4.css
@@ -119,9 +119,9 @@ footer {
 }
 
 .BYUI2 {
-    color: #ef6429;
+    color: #0e165c;
 }
 
 .BYUI2:hover {
-    color: #475e4e;
+    color: #0e165c79;
 }
