--- a/Lesson04/css/preston-4.css
+++ b/Lesson04/css/preston-4.css
@@ -4,6 +4,7 @@ header {
     background-color: #F1F5A9;
     color: #54665A;
     width: 100%;
+    height: 150px;
     display: grid;
     grid-template-columns: 25% 75%;
     grid-template-rows: 1fr 1fr;
@@ -16,15 +17,7 @@ header {
 }
 
 .logoImage {
-    width: 100px;
-    height: auto;
-    grid-column: 1;
-    grid-row: 1/3;
-    justify-self: center;
-    align-self: center;
-    padding-right: 10px;
-    padding-top: 10px;
-    padding-bottom: 0;
+    display: none;
 }
 
 .headerH1 {
@@ -33,9 +26,9 @@ header {
     text-shadow:0 4px 5px #f3f88e;
     font-family: 'Playfair+Display', Times, serif;
     font-size: 1.6rem;
-    grid-column: 2;
+    grid-column: 1/3;
     grid-row: 1;
-    padding-top: 50px;
+    padding-top: 20px;
     margin-bottom: 5px;
     justify-self: center;
 }
@@ -46,7 +39,7 @@ header {
     text-shadow:0 5px 6px #f1f5a9;
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: .6rem;
-    grid-column: 2;
+    grid-column: 1/3;
     grid-row: 2;
     padding-left: 10px;
     padding-right: 10px;
