--- a/Lesson05/css/bom.css
+++ b/Lesson05/css/bom.css
@@ -5,7 +5,7 @@ h1 {
 }
 
 .content {
-    width: 32%;
+    width: 50%;
     min-height: 100px;
     border: 5pz double #eee;
     background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
@@ -20,6 +20,9 @@ h1 {
 button {
     background: rgba(131,58,180,1);
     color: #eee;
+    position: absolute;
+    right: 430px;
+    margin-right: 20px;
 
 }
 
