--- a/Lesson03/css/weather.css
+++ b/Lesson03/css/weather.css
@@ -49,7 +49,7 @@ nav ul {
 
 nav ul li a {
     display: block;
-    color: #779280;
+    color: #4b6152;
     text-align: center;
     padding: 1rem;
     text-decoration: none;
@@ -222,7 +222,7 @@ tr {
 
 .sample5 {
     font-family: 'Playfair+Display', Times, serif;
-    font-size: 20;
+    font-size: 20px;
     color: #54665A;
 }
 
