--- a/Lesson03/css/weather.css
+++ b/Lesson03/css/weather.css
@@ -49,7 +49,7 @@ nav ul {
 
 nav ul li a {
     display: block;
-    color: #4b6152;
+    color: #2d4936;
     text-align: center;
     padding: 1rem;
     text-decoration: none;
