--- a/Lesson03/css/weather.css
+++ b/Lesson03/css/weather.css
@@ -110,7 +110,7 @@ img {
     padding: 8px;
     margin-right: 0;
     background-color: #82BFAC;
-    color: #546654;
+    color: #2f412f;
 }
 .grid2 {
     grid-column: 1;
@@ -125,7 +125,7 @@ img {
     padding: 8px;
     margin-right: 0;
     background-color: #cae9a1;
-    color: #546654;
+    color: #2f412f;
 }
 
 .grid3 {
@@ -141,7 +141,7 @@ img {
     padding: 8px;
     margin-right: 0;
     background-color: #f1f5a9;
-    color: #546654;
+    color: #2f412f;
 }
 
 .grid4 {
@@ -157,7 +157,7 @@ img {
     padding: 8px;
     margin-right: 0;
     background-color: #ebb26f;
-    color: #546654;
+    color: #2f412f;
 }
 
 .wide {
