--- a/Lesson03/css/weather.css
+++ b/Lesson03/css/weather.css
@@ -109,8 +109,8 @@ img {
     margin-left: 0;
     padding: 8px;
     margin-right: 0;
-    background-color: #82BFAC;
-    color: #2f412f;
+    background-color: #a3dac8;
+    color: #375537;
 }
 .grid2 {
     grid-column: 1;
@@ -156,7 +156,7 @@ img {
     margin-left: 0;
     padding: 8px;
     margin-right: 0;
-    background-color: #ebb26f;
+    background-color: #ebba82;
     color: #2f412f;
 }
 
