--- a/Lesson03/css/weather.css
+++ b/Lesson03/css/weather.css
@@ -109,7 +109,7 @@ img {
     margin-left: 0;
     padding: 8px;
     margin-right: 0;
-    background-color: #a3dac8;
+    background-color: #b5e0d2;
     color: #375537;
 }
 .grid2 {
@@ -156,7 +156,7 @@ img {
     margin-left: 0;
     padding: 8px;
     margin-right: 0;
-    background-color: #ebba82;
+    background-color: #eec392;
     color: #2f412f;
 }
 
