--- a/Lesson03/css/weather.css
+++ b/Lesson03/css/weather.css
@@ -202,7 +202,7 @@ tr {
 .sample2 {
     font-family: 'Playfair+Display', Times, serif;
     font-size: 35px;
-    background-color: #82BFAC;
+    background-color: #63b69c;
     color: #f1f3d9;
 }
 
