--- a/Lesson03/css/weather.css
+++ b/Lesson03/css/weather.css
@@ -110,7 +110,7 @@ img {
     padding: 8px;
     margin-right: 0;
     background-color: #b5e0d2;
-    color: #375537;
+    color: #1e311e;
 }
 .grid2 {
     grid-column: 1;
@@ -157,7 +157,7 @@ img {
     padding: 8px;
     margin-right: 0;
     background-color: #eec392;
-    color: #2f412f;
+    color: #1b311b;
 }
 
 .wide {
