--- a/Lesson05/css/preston-5.css
+++ b/Lesson05/css/preston-5.css
@@ -27,7 +27,8 @@ header {
     font-size: 1.6rem;
     grid-column: 1/3;
     grid-row: 1;
-    padding-top: 20px;
+    padding-top: 25px;
+    padding-left: 0;
     margin-bottom: 5px;
     justify-self: center;
 }
@@ -37,10 +38,9 @@ header {
     text-shadow:0 5px 6px #f1f5a9;
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: .6rem;
-    grid-column: 1/3;
+    grid-column: 2/4;
     grid-row: 2;
-    padding-left: 10px;
-    padding-right: 10px;
+   padding-left: 20px;
     margin-top: 0;
     justify-self: center;
     padding-top: 0;
@@ -89,10 +89,7 @@ nav, footer{
     background-color: #475e4e;
 }
 
-.active-page a:hover {
-    color: #475e4e;
-    background-color: white;
-}
+
 
 .responsive li {
 	display: block;
@@ -120,6 +117,7 @@ h1 {
     margin-top: 10px;
     margin-bottom: 10px;
     margin-right: 0;
+    margin-left: 10px;
     background-color:#F1F5A9;
     opacity: 100%;
     color: #475e4e;
@@ -143,6 +141,7 @@ h1 {
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: 1.25em;
     padding-bottom: .5em;
+    padding-left: 6em;
 }
 
 .left {
@@ -155,18 +154,187 @@ h1 {
 
 
 
-.forcast, .article, .contact {
-    min-height: 50px;
-    display: block;
-    width: 100%;
-    border: 1px dotted black;
-    margin-top: 10px;
-}
-
 .weatherimage {
     height: 150px;
     width: auto;
 }
+
+.fivedaydrop {
+    text-align: center;
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    color: #475e4e;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-top: 15px;
+}
+
+.grid {
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-items: center;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+.r1 {
+    grid-row: 1;
+    grid-column: 1/6;
+    font-family:  'Playfair+Display', Times, serif;
+    font-size: 2em;
+    color:#ef6429;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.row2 {
+    font-size: 1.5em;
+    background-color:#F1F5A9;
+    color: #475e4e;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.r2c1 {
+    grid-column: 1;
+    grid-row: 2;
+  
+}
+
+
+.row3 {
+    display: none;
+}
+
+.r2c2 {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.r2c3 {
+    grid-column: 3;
+    grid-row: 2;
+}
+
+.r2c4 {
+    grid-column: 1;
+    grid-row: 3;
+}
+
+.r2c5 {
+    grid-column: 2;
+    grid-row: 3;
+}
+
+.row4 {
+    display: flex;
+    justify-content: center;
+    color:rgb(26, 109, 109);
+}
+.row5 {
+    margin-bottom: 10px;
+    color:rgb(26, 109, 109);
+    display: flex;
+    justify-content: center;
+}
+.article {
+    display: block;
+    width: 100%;
+    margin-top: 10px;
+    background-color: #d2eca3;
+}
+
+.article-image {
+    display: block;
+    width: 100%;
+    padding-top: 20px;
+}
+.article-title {
+    color:rgb(10, 51, 51);
+    font-family: 'Playfair+Display', Times, serif;
+    font-size: 1.8em;
+    text-align: center;
+}
+
+.article-content {
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    padding: 20px;
+    color:rgb(26, 109, 109);
+}
+
+.footer1 {
+    background-color: #77aeb1;
+    margin-left: .2em;
+    margin-right: .2em;
+}
+
+.contact {
+    display: block;
+    width: 100%;
+    margin: 10px;
+
+}
+
+.contact-title {
+    color:#eff1c6fa;
+    font-family: 'Playfair+Display', Times, serif;
+    font-size: 1.8em;
+    text-align: center;
+}
+
+.contacticons {
+    width: 25px;
+    height: auto;
+    padding-left: 50px;
+    padding-top: 10px;
+    padding-right: 5px;
+}
+
+.contact-info a{
+    color:rgb(10, 51, 51)    
+}
+
+.contact-address {
+    display: none;
+}
+
+.social-icons {
+    display: none;
+}
+
+.mapouter1 {
+    display: block;
+    position: relative;
+    left: 10px;
+    padding-left: 35px;
+    padding-right: 35px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    height:150px;
+    width:300px;
+}
+
+.gmap1 {
+    display: block;
+    overflow:hidden;
+    background:none;
+    height: 150px;
+    width: 300px;
+}
+
+.mapouter{
+    display: none;
+} 
+
+.gmap {
+        display: none;
+    }
 
 footer {
     text-align: center;
@@ -177,9 +345,9 @@ footer {
     padding-right: 0;
     padding-top: 5px;
     padding-bottom: 5px;
-    margin-top: 15px;
+    margin-top: 0px;
 }
-
+    
 .BYUI2 {
     color: #0e165c;
 }
