--- a/Lesson05/css/preston-large.css
+++ b/Lesson05/css/preston-large.css
@@ -37,20 +37,164 @@ nav {
     }
     
     .hero-box {
-        width: auto;
+        max-width: 400px;
         padding: 20px;
         opacity: 80%;
         position: absolute;
-        top: 500px;
-        right: 1060px;
+        top: 475px;
+        right: 800px;
+    }
+
+    .weather-box {
+        padding-left: .2em;
+    }
+
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: auto;
+        margin-left: 200px;
+        margin-right: 200px;
+    }
+
+    .row2 {
+        padding-left: 60px;
+        padding-right: 60px;
+    }
+
+    .row3 {
+        display: flex;
+        justify-content: center;
+        padding-top: 20px;
+        padding-bottom: 10px;
+    }
+
+    .r1 {
+        grid-row: 1;
+        grid-column: 1/6;
+        font-family:  'Playfair+Display', Times, serif;
+        font-size: 2em;
+        color:#ef6429;
+        padding-top: 20px;
+        padding-bottom: 20px;
     }
     
+    
+    .r2c1 {
+        grid-column: 1;
+        grid-row: 2;
+      
+    }
+    
+    .r2c2 {
+        grid-column: 2;
+        grid-row: 2;
+    }
+    
+    .r2c3 {
+        grid-column: 3;
+        grid-row: 2;
+    }
+    
+    .r2c4 {
+        grid-column: 4;
+        grid-row: 2;
+    }
+    
+    .r2c5 {
+        grid-column: 5;
+        grid-row: 2;
+    }
+
+    .article-image {
+        float: right;
+        width: 350px;
+        height: auto;
+        padding-top: 0px;
+        margin-top: 25px;
+        margin-right: 20px;
+        box-shadow: 2px 2px 4px #77aeb1;
+    }
+
+    .article-title {
+        margin-top: 10px;
+        padding-top: 30px;
+    }
+
+    .footer1 {
+        max-height: 280px;
+        margin-left: 140px;
+        margin-right: 140px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .contact-title {
+        grid-column: 2;
+        grid-row: 1;
+    }
+    .contact-address {
+        display: block;
+        grid-column: 2;
+        grid-row: 2;
+    }
+
+    .contacticons {
+        grid-column: 2;
+        grid-row: 3;
+    }
+
+    .social-icons {
+        display: block;
+        grid-column: 2;
+        grid-row: 4;
+        padding-bottom: 10px;
+         }
+
+    .social {
+        width: 50px;
+
+    }
+
+    .mapouter1 {
+        display: none;
+    }
+
+    .gmap1 {
+        display: none;
+    }
+    
+    .mapouter{
+        display: block;
+        grid-column: 1;
+        grid-row: 1/5;
+        padding-left: 100px;
+    padding-right: 100px;
+    padding-top: 25px;
+    padding-bottom: 10px;
+    height:250px;
+    width:500px;
+    }
+    .gmap {
+        display: block;
+        grid-column: 1;
+        grid-row: 1/5;
+        overflow:hidden;
+        background:none;
+        height: 250px;
+        width: 500px;
+
+        }
+    .social-icons {
+        display: block;
+    } 
       
 footer {
-    padding-top: 15px;
+    padding-top: 0;
     padding-bottom: 15px;
     padding-left: 190px;
     padding-right: 190px;
     margin-bottom: 25px;
 }
+
 }
