--- a/Lesson05/css/preston-large.css
+++ b/Lesson05/css/preston-large.css
@@ -13,13 +13,13 @@ header {
 .headerH1 {
     font-size: 3rem;
     padding-top: 50px;
-    padding-right: 250px;
+    padding-right: 90px;
 }
 
 
 .headerP {
     font-size: 1.05rem;
-    padding-right: 250px;
+    padding-right: 300px;
     justify-self: center;
 }
 
@@ -36,6 +36,11 @@ nav {
         
     }
     
+    .heroimage {
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+    }
     .hero-box {
         max-width: 400px;
         padding: 20px;
@@ -50,16 +55,17 @@ nav {
     }
 
     .grid {
+        width: 80%;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
         grid-template-rows: auto;
-        margin-left: 200px;
-        margin-right: 200px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .row2 {
-        padding-left: 60px;
-        padding-right: 60px;
+        padding-left: 50px;
+        padding-right: 50px;
     }
 
     .row3 {
@@ -106,6 +112,12 @@ nav {
         grid-row: 2;
     }
 
+    .article {
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
     .article-image {
         float: right;
         width: 350px;
@@ -122,10 +134,11 @@ nav {
     }
 
     .footer1 {
+        width: 80%;
         max-height: 300px;
-        margin-left: 140px;
-        margin-right: 140px;
         margin-bottom: 2px;
+        margin-right: auto;
+        margin-left: auto;
         display: grid;
         grid-template-columns: 1fr 1fr;
     }
@@ -206,10 +219,13 @@ nav {
     } 
       
 footer {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 225px;
+    padding-right: 225px;
     padding-top: 1px;
     padding-bottom: 15px;
-    padding-left: 190px;
-    padding-right: 190px;
     margin-bottom: 25px;
 }
 
