--- a/Lesson06/css/preston6.css
+++ b/Lesson06/css/preston6.css
@@ -268,32 +268,38 @@ main figure.heroimage img {
 .article {
     display: block;
     width: 100%;
-    margin-top: 10px;
     background-color: #d2eca3;
 }
 
 main figure.article-image {
     width: 100%;
     display: block;
-    padding-top: 20px;
-    margin-left: 0;
+   
+   margin-left: 0;
     margin-right: 0;
 }
 
 main figure.article-image img {
     width: 100%;
+    margin-left: 20px;
 }
 
-.article-title {
+main .article .article-title {
     color:rgb(10, 51, 51);
     font-family: 'Playfair+Display', Times, serif;
     font-size: 1.8em;
     text-align: center;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
-.article-content {
+main .article .article-content {
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
-    padding: 20px;
+    padding-top: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
     color:rgb(26, 109, 109);
 }
 
