--- a/Lesson07/css/lazyload.css
+++ b/Lesson07/css/lazyload.css
@@ -1,4 +1,4 @@
-.pictures {
+.gallery {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: auto;
@@ -42,11 +42,3 @@
     justify-self: center;
 }
 
-article img[data-src] {
-    filter: blur(0.2em);
-  }
-  
-  article img {
-    filter: blur(0em);
-    transition: filter 0.5s;
-  }
