--- a/Lesson06/css/preston6Large.css
+++ b/Lesson06/css/preston6Large.css
@@ -231,4 +231,11 @@ footer {
     margin-bottom: 25px;
 }
 
+.gallery {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    grid-column-gap: 10px;
+    justify-content: center;
+}
 }
