--- a/Lesson08/css/tablebuild.css
+++ b/Lesson08/css/tablebuild.css
@@ -4,10 +4,7 @@ table {
     font-family:  Ubuntu, sans-serif;
     border: 2px solid #d3d3d3;
     border-collapse: collapse;
-    box-shadow: 8px 8px 15px #628ca6;
     text-align: center;
-    margin-left: 20px;
-    margin-top: 20px;
 }
 
 #sales thead tr th:nth-child(1) {
@@ -53,4 +50,18 @@ table {
 #sales tfoot tr td {
     background-color: #7fb9c2;
     font-size: .8em;
+}
+
+@media screen and (min-width: 60em) {
+
+table {
+    margin-left: 20px;
+    margin-top: 20px;
+    box-shadow: 8px 8px 15px #628ca6;
+}
+
+#sales thead tr th:nth-child(1) {
+    padding-left: 5em;
+    padding-right: 5em;
+}
 }
