--- a/Lesson08/css/week8large.css
+++ b/Lesson08/css/week8large.css
@@ -230,4 +230,12 @@
         padding-bottom: 15px;
         margin-bottom: 25px;
     }
+
+    /* storm page css */
+    .grid {
+        display: grid;
+        grid-gap: .5em;
+        grid-template-columns: repeat(auto-fit, 1fr);
+        grid-template-rows: repeat(auto-fit, 1fr);
+    }
     }
