--- a/Lesson09/css/prophets.css
+++ b/Lesson09/css/prophets.css
@@ -40,7 +40,7 @@ p {
 
 img {
     width: 225px;
-    height: 275px;
+    max-height: 250px;
     margin-top: 10px;
     margin-bottom: 10px;
     box-shadow: 2px 2px 4px #0E0E52;
