--- a/Lesson09/css/home.css
+++ b/Lesson09/css/home.css
@@ -496,16 +496,47 @@ form {
 .way2go {
     text-align: center;
     font-family: 'Playfair+Display', Times, serif;
-    font-size: 2em;
+    font-size: 1em;
     color:#483248;
 }
 
 .huh {
     color: #FA8072;
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    font-size: .5em;
     margin-left: 10px;
 }
 
 section {
-    display: block;
+    background-color: #77aeb1;
+    margin: .5rem auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+article {
+    font-size: .5em;
+}
+
+.fish-title, .soda-title, .preston-title {
+    font-family: 'Playfair+Display', Times, serif;
+    font-size: 3em;
+    margin-left: .5em;
+    margin-right: .5em;
+}
+
+.fish-motto, .soda-motto, .preston-motto {
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    font-size: .5em;
+}
+
+.sodaphoto, .prestonphoto {
+    width: 300px;
+    height: 200px;
+    padding-top: 40px;
+    
+}
+.soda, .fish, .preston, .townphotos {
+    display: flex;
+    flex: 100%;
 }
