--- a/Lesson09/css/home.css
+++ b/Lesson09/css/home.css
@@ -496,33 +496,39 @@ form {
 .way2go {
     text-align: center;
     font-family: 'Playfair+Display', Times, serif;
-    font-size: 1em;
+    font-size: 1.35em;
     color:#483248;
 }
 
 .huh {
     color: #FA8072;
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
-    font-size: .5em;
-    margin-left: 10px;
+    font-size: .75em;
+    margin-left: 20px;
+    margin-right: 30px;
 }
 
-section {
+.soap-box {
     background-color: #77aeb1;
     margin: .5rem auto;
-    display: flex;
-    flex-wrap: wrap;
+    width: 400px;
 }
 
-article {
-    font-size: .5em;
+.soap-box article {
+    display: grid;
+    grid-template-columns: 100%;
 }
 
 .fish-title, .soda-title, .preston-title {
     font-family: 'Playfair+Display', Times, serif;
-    font-size: 3em;
+    font-size: 1em;
     margin-left: .5em;
     margin-right: .5em;
+    padding-left: 10px;
+}
+
+.fish-title {
+    line-height: 1.5em;
 }
 
 .fish-motto, .soda-motto, .preston-motto {
@@ -530,13 +536,21 @@ article {
     font-size: .5em;
 }
 
-.sodaphoto, .prestonphoto {
-    width: 300px;
-    height: 200px;
-    padding-top: 40px;
-    
+.prestonphoto, .fishphoto, .sodaphoto {
+    width: 400px;
+    height: 250px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 25px;
 }
-.soda, .fish, .preston, .townphotos {
-    display: flex;
-    flex: 100%;
+
+
+.soda, .preston, .fish {
+    width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #77aeb1;
+    color: white;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
