--- a/Lesson09/css/large.css
+++ b/Lesson09/css/large.css
@@ -238,19 +238,71 @@
         grid-template-columns: repeat(auto-fit, 1fr);
         grid-template-rows: repeat(auto-fit, 1fr);
     }
-    }
-
-    /* home page 
-    section {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-gap: 20px;
-    }
-
-    .huh {
-        margin-left: 250px;
-    }
-*/
-
-
     
+
+    /* home page */
+    .way2go {
+    font-size: 2.5em;
+}
+.huh {
+    margin-left: 250px;
+    margin-right: 250px;
+}
+
+.fish-title, .soda-title, .preston-title {
+    font-size: 1.2em;
+    margin-left: 1em;
+    margin-right: 1em;
+    padding-left: 10px;
+    text-align: center;
+}
+
+.fish-motto, .soda-motto, .preston-motto {
+    font-size: .6em;
+}
+
+.soap-box {
+    width: 1100px;
+    padding: 10px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column-gap: 10px;
+}
+
+
+.soap-box article:nth-child(1) img {
+    grid-column: 1;
+    grid-row: 1;
+    width: 350px;
+}
+
+.soap-box article:nth-child(1) .data {
+    grid-column: 1;
+    grid-row: 2;
+    width: 350px;
+}
+
+.soap-box article:nth-child(3) img {
+    grid-column: 3;
+    grid-row: 1;
+    width: 350px;
+}
+
+.soap-box article:nth-child(3) .data {
+    grid-column: 3;
+    grid-row: 2;
+    width: 350px;
+}
+
+
+.soap-box article:nth-child(even) img {
+    grid-column: 2;
+    grid-row: 1;
+    width: 350px;
+}
+
+.soap-box article:nth-child(even) .data {
+    grid-column: 2;
+    grid-row: 2;
+    width: 250px;
+}
+}
