--- a/Lesson09/css/medium.css
+++ b/Lesson09/css/medium.css
@@ -230,11 +230,18 @@ footer {
 .soap-box article:nth-child(even) img {
     grid-column: 1/3;
     width: 350px;
+    color: #77aeb1;
+    background-color: white;
+    padding-bottom: 10px;
 }
 
 .soap-box article:nth-child(even) .data {
     grid-column: 3;
     grid-row: 1;
     width: 250px;
+    height: 250px;
+    color: #77aeb1;
+    background-color: white;
+    padding-top: 10px;
 }
 }
